# muscles-otel

./: README.md  pyproject.toml
docs/: otel-lifecycle.en.md  otel-lifecycle.ru.md
examples/: run_package_lifecycle.py
src/muscles_otel/: __init__.py  instrumentation.py  package.py
tests/: test_instrumentation.py  test_package_lifecycle.py
